// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id                  String          @id @default(cuid())
  email               String          @unique
  password            String
  name                String?
  phone               String?         @unique
  phoneVerified       Boolean         @default(false)
  membership          String          @default("free")
  membershipExpiresAt DateTime?
  maxKnowledgeBases   Int             @default(3)
  maxDocuments        Int             @default(10)
  createdAt           DateTime        @default(now())
  updatedAt           DateTime        @updatedAt
  knowledgeBases      KnowledgeBase[]
  ownedTeams          Team[]          @relation("TeamOwner")
  teamMembers         TeamMember[]
}

model Team {
  id             String          @id @default(cuid())
  name           String
  description    String?
  ownerId        String
  owner          User            @relation("TeamOwner", fields: [ownerId], references: [id], onDelete: Cascade)
  members        TeamMember[]
  knowledgeBases KnowledgeBase[]
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
}

model TeamMember {
  id        String   @id @default(cuid())
  teamId    String
  team      Team     @relation(fields: [teamId], references: [id], onDelete: Cascade)
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  role      String   @default("member") // owner | admin | member
  createdAt DateTime @default(now())

  @@unique([teamId, userId])
}

model SmsCode {
  id        String   @id @default(cuid())
  phone     String
  code      String
  type      String   // register | login | reset_password
  used      Boolean  @default(false)
  expiresAt DateTime
  createdAt DateTime @default(now())
}

model RefreshToken {
  id        String   @id @default(cuid())
  token     String   @unique
  userId    String
  expiresAt DateTime
  createdAt DateTime @default(now())
}

model PaymentOrder {
  id            String   @id @default(cuid())
  userId        String
  outTradeNo    String   @unique // 商户订单号，唯一，回调用
  subject       String   // 商品名称，如 "Pro会员-1个月"
  totalAmount   String   // 金额，字符串避免浮点精度问题
  status        String   @default("pending") // pending | paid | closed
  membership    String   // 购买的会员等级
  durationMonths Int     // 购买月数
  paidAt        DateTime?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model KnowledgeBase {
  id          String        @id @default(cuid())
  name        String
  description String?
  userId      String
  user        User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  teamId      String?
  team        Team?         @relation(fields: [teamId], references: [id], onDelete: SetNull)
  documents   Document[]
  sessions    ChatSession[]
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
}

model Document {
  id                String          @id @default(cuid())
  filename          String
  originalName      String
  mimeType          String
  size              Int
  tags              String          @default("")  // 逗号分隔的标签
  folder            String          @default("/") // 文件夹路径，如 "/技术/前端/"
  version           Int             @default(1)   // 版本号
  parentDocumentId  String?         // 上一版本文档 ID（链式版本追踪）
  knowledgeBaseId   String
  knowledgeBase     KnowledgeBase   @relation(fields: [knowledgeBaseId], references: [id], onDelete: Cascade)
  chunks            DocumentChunk[]
  createdAt         DateTime        @default(now())
}

model MessageFeedback {
  id        String   @id @default(cuid())
  messageId String
  userId    String
  type      String   // like | dislike
  comment   String?  // 可选反馈文字
  createdAt DateTime @default(now())
}

model DocumentChunk {
  id         String   @id @default(cuid())
  content    String
  vectorId   String   // Chroma 中对应的向量 ID
  chunkIndex Int
  documentId String
  document   Document @relation(fields: [documentId], references: [id], onDelete: Cascade)
  createdAt  DateTime @default(now())
}

model ChatSession {
  id              String        @id @default(cuid())
  title           String?
  knowledgeBaseId String
  knowledgeBase   KnowledgeBase @relation(fields: [knowledgeBaseId], references: [id], onDelete: Cascade)
  messages        ChatMessage[]
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
}

model ChatMessage {
  id        String   @id @default(cuid())
  role      String   // user | assistant
  content   String
  sessionId String
  session   ChatSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
}
